# jnav

./: .gitignore  README.md  justfile  lefthook.yml  main.py  pyproject.toml
src/jnav/: __main__.py  app.py  buffer.py  column_manager_screen.py  detail_panel.py  detail_tree.py  entry_summary.py  field_manager.py  field_manager_screen.py  field_mapping.py  filter_manager_screen.py  filter_provider.py  filter_tree.py  filtering.py  header.py  help_screen.py  inline_tree.py  json_model.py  key_sequences.py  log_entry_item.py  log_entry_renderer.py  log_list_panel.py  log_list_view.py  log_model.py  logging.py  manager_screen_common.py  node_path.py  offset_group.py  parsing.py  reading.py  role_mapper.py  scrollbar_overlay.py  search_engine.py  selector_manager_screen.py  selector_provider.py  store.py  text_input_screen.py  tree_rendering.py  virtual_list_view.py
tests/: conftest.py  test_buffer.py  test_detail_tree.py  test_field_manager.py  test_filter_provider.py  test_filter_tree.py  test_filtering.py  test_json_model.py  test_log_list_view.py  test_log_model.py  test_node_path.py  test_parsing.py  test_role_mapper.py  test_search_engine.py  test_selector_provider.py  test_store.py  test_tree_rendering.py  test_virtual_list_view.py
tests/integration/: test_detail_view_on_open.py  test_pipeline.py
typings/: jq.pyi
