[project]
name = "jnav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=1.0.0",
    "click>=8.1.0",
    "jq>=1.8.0",
]

[project.scripts]
jnav = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
